--- a/templates/default/metric_maker_run.rb.erb
+++ b/templates/default/metric_maker_run.rb.erb
@@ -3,6 +3,7 @@ require 'rubygems'
 require 'json'
 require 'net/http'
 require 'aws-sdk'
+require 'thread'
 
 ROOT_PATH='<%= node['metric_maker']['root'] %>'
 REGION_OVERRIDE='<%= node['metric_maker']['region_override'] %>'
@@ -25,6 +26,7 @@ class MetricMaker
     #  unit string
     #  publish_with_no_dimension bool
     #
+    threads = []
 
     Dir["#{ROOT_PATH}/conf/*.json"].each do |config|
       metric = JSON.parse(File.read(config))
@@ -53,9 +55,14 @@ class MetricMaker
         params[:metric_data].last[:dimensions] = metric['dimensions'].map{|element| {name: element.first.first, value: element.first.last} }
       end
 
-      puts JSON.pretty_generate(params)
-      @cwm.put_metric_data(params)
+      threads << Thread.new{put_metric_data_thread(params)}
+      threads.each{|t| t.join}
     end
+  end
+
+  def put_metric_data_thread(params)
+    puts JSON.pretty_generate(params)
+    @cwm.put_metric_data(params)
   end
 
 end
