use UTC time so as to not end up with timezone changing issues associated with local time

--- a/templates/default/metric_maker_run.rb.erb
+++ b/templates/default/metric_maker_run.rb.erb
@@ -48,7 +48,7 @@ class MetricMaker
       namespace: metric['namespace'],
       metric_data: [
         metric_name: metric['name'],
-        timestamp: Time.now,
+        timestamp: Time.now.utc,
         value: value.strip.to_f,
         unit: metric['unit']
       ]
