--- a/templates/windows/metric_maker_run.rb.erb
+++ b/templates/windows/metric_maker_run.rb.erb
@@ -51,7 +51,7 @@ class MetricMaker
       namespace: metric['namespace'],
       metric_data: [
         metric_name: metric['name'],
-        timestamp: Time.now,
+        timestamp: Time.now.utc,
         value: value.strip.to_f,
         unit: metric['unit']
       ]
