--- a/templates/default/metric_maker_run.rb.erb
+++ b/templates/default/metric_maker_run.rb.erb
@@ -2,7 +2,7 @@
 require 'rubygems'
 require 'json'
 require 'net/http'
-require 'aws-sdk'
+require 'aws-sdk-cloudwatch'
 require 'thread'
 
 ROOT_PATH='<%= node['metric_maker']['root'] %>'
