--- a/templates/windows/metric_maker_run.rb.erb
+++ b/templates/windows/metric_maker_run.rb.erb
@@ -2,7 +2,7 @@
 require 'rubygems'
 require 'json'
 require 'net/http'
-require 'aws-sdk'
+require 'aws-sdk-cloudwatch'
 require 'thread'
 require 'base64'
 
